--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "forge-std": "github:foundry-rs/forge-std#v1.8.1"
   },
   "dependencies": {
-    "drosera-contracts": "https://github.com/drosera-network/contracts"
+    "drosera-contracts": "github:drosera-network/contracts"
   }
 }
